care/force-app/main/default/objects/Referral_Benefit__c/Referral_Benefit__c.object-meta.xml
<CustomObject>
    <label>Referral Benefit</label>
    <nameField>
        <displayFormat>RB-{0000}</displayFormat>
        <label>Referral Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>