care/force-app/main/default/objects/Referral_Benefit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for SFORCE-8328</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Benefits</relationshipLabel>
    <relationshipName>Referral_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>