care/force-app/main/default/objects/Referral_Benefit__c/fields/Benefit_Description__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Description__c</fullName>
    <description>Created for SFORCE-8328</description>
    <label>Benefit Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>