care/force-app/main/default/objects/Referral_Benefit__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <description>Created for SFORCE-8328</description>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adoption Subsidy</fullName>
            </value>
            <value>
                <fullName>Backup Care</fullName>
            </value>
            <value>
                <fullName>Behavioral Support for Parents</fullName>
            </value>
            <value>
                <fullName>Benefit Plan Inquiries</fullName>
            </value>
            <value>
                <fullName>College Support</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>Family Resource Platform</fullName>
            </value>
            <value>
                <fullName>Fertility Assistance</fullName>
            </value>
            <value>
                <fullName>Health and Wellness App</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Internal Benefit Resource</fullName>
            </value>
            <value>
                <fullName>Lactation Support</fullName>
            </value>
            <value>
                <fullName>Legal Plans</fullName>
            </value>
            <value>
                <fullName>LGBTQ+ Care Concierge Service</fullName>
            </value>
            <value>
                <fullName>Parental Success</fullName>
            </value>
            <value>
                <fullName>Pet Care</fullName>
            </value>
            <value>
                <fullName>Pet Insurance</fullName>
            </value>
            <value>
                <fullName>Wellbeing</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>