care/force-app/main/default/objects/Referral_Benefit__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Created for SFORCE-8328</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>