care/force-app/main/default/objects/Referral_Benefit__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Created for SFORCE-8328</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>